<resources>
    <string name="app_name">Popcorn.moe</string>
    <string name="button">Validate</string>
    <string name="first"> <i> Hi Welcome to Popcorn.moe </i> </string>
    <string name="Age">Age</string>
    <string name="login">Username</string>
    <string name="password">Password</string>
    <string name="unregister">Unregister</string>
    <string name="register">Already Registered</string>
    <string name="remember">Remember me?</string>
    <string name="Login">Username</string>
    <string name="cond1">By clicking on login, You accept our terms of use and our CGU and CGV.</string>
    <string name="cond2">You accept our terms and our CGU and CGV.</string>
</resources>
